--- a/.github/workflows/redmi-ax6000-openWrt-23.05.yml
+++ b/.github/workflows/redmi-ax6000-openWrt-23.05.yml
@@ -19,7 +19,7 @@ on:
       ip:
         description: 'lan ip address'
         required: true
-        default: '192.168.1.1'
+        default: '192.168.10.1'
       ssh:
         description: 'SSH connection to Actions'
         required: false
@@ -44,7 +44,7 @@ env:
   UPLOAD_WETRANSFER: false
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  LANIP: 192.168.1.1
+  LANIP: 192.168.10.1
 
 jobs:
   build_firmware:
@@ -100,7 +100,7 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
-        sed -i 's/192.168.1.1/'"${LANIP}"'/g' package/base-files/files/bin/config_generate
+        sed -i 's/192.168.1.1/192.168.10.1/g' package/base-files/files/bin/config_generate
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
